tests/NormalTests/paczka1/fuzzy1/19473757.err
Error in line 8: A301 A301 93,7
Error in line 7: IIfMtjL A301 37,2
Error in line 24: A301 S956 38,1
Error in line 30: 1XbKDAdD S902 -1,5
Error in line 28: A301 S902 15,0
